@@ -332,3 +332,4 @@
  30-Mar-2022  V1.700 Add pdbx_comp_model_core database to CLI commands, and
                      Add support for loading id code lists for mongo PdbxLoader() (preliminary)
                      Exclude 'ma_' categories from being declared as mandatory
+  1-Jun-2022  V1.701 Enable use of cluster filename template configuration passed in by Luigi
